--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -62,10 +62,13 @@ jobs:
       contents: 'read'
       id-token: 'write'
       pull-requests: 'write'
+
+    # ensure these defaults exist to run command in the specified working_directory
     defaults:
       run:
         shell: 'bash'
         working-directory: '${{ inputs.working_directory }}'
+
     steps:
       - name: 'Start Comment'
         id: 'comment'
@@ -101,90 +104,62 @@ jobs:
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@62d4898025f6041e16b1068643bfc5a696863587' # ratchet:google-github-actions/setup-gcloud@v1
 
-      - name: 'Guardian Plan'
+      - name: 'Cloud SDK Config'
         run: |-
-          # Guardian Plan
-          set -o pipefail
-
-          NAME="Cloud SDK Config"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+          echo "# Cloud SDK Config" > ${{ env.OUT_FILENAME }}
           gcloud config set storage/max_retries ${{ inputs.max_retries }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
           gcloud config set storage/base_retry_delay ${{ inputs.base_retry_delay }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
           gcloud config set storage/max_retry_delay ${{ inputs.max_retry_delay }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
 
-          echo "::endgroup::"
-
-          NAME="Terraform Format"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+      - name: 'Terraform Format'
+        run: |-
+          echo "# Terraform Format" > ${{ env.OUT_FILENAME }}
           terraform fmt -check -diff -recursive -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
 
-          echo "::endgroup::"
-
-          NAME="Terraform Init"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+      - name: 'Terraform Init'
+        run: |-
+          echo "# Terraform Init" > ${{ env.OUT_FILENAME }}
           terraform init -input=false -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
 
-          echo "::endgroup::"
-
-          NAME="Terraform Validate"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+      - name: 'Terraform Validate'
+        run: |-
+          echo "# Terrafomr Validate" > ${{ env.OUT_FILENAME }}
           terraform validate -no-color 2>&1 | tee -a ${{ env.OUT_FILENAME }}
 
-          echo "::endgroup::"
-
-          NAME="Terraform Plan"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+      - name: 'Terraform Plan'
+        run: |-
+          echo "# Terraform Plan" > ${{ env.OUT_FILENAME }}
           terraform plan -lock-timeout=10m -input=false -no-color -out=${{ env.GUARDIAN_PLAN_FILENAME }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
 
-          echo "::endgroup::"
-
-          NAME="GitHub Format"
-          echo "::group::${NAME}"
-
+      - name: 'GitHub Format'
+        run: |-
           # ensure outfile exists
           touch ${{ env.OUT_FILENAME }}
 
           sed -i -E 's|^([[:space:]]*)([~])|\1\!|g' ${{ env.OUT_FILENAME }}
           sed -i -E 's|^([[:space:]]*)([-+\!])|\2\1|g' ${{ env.OUT_FILENAME }}
 
-          echo "::endgroup::"
-
-          NAME="Set Success Variable"
-          echo "::group::${NAME}"
+      - name: 'Set Success Variable'
+        run: |-
+          # ensure outfile exists
+          touch ${{ env.OUT_FILENAME }}
 
           SUCCESS=$(cat ${{ env.OUT_FILENAME }})
           echo "SUCCESS<<EOF" >> $GITHUB_ENV
           echo "$SUCCESS" >> $GITHUB_ENV
           echo "EOF" >> $GITHUB_ENV
 
-          echo "::endgroup::"
-
-          NAME="Upload Plan File"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+      - name: 'Upload Plan File'
+        run: |-
+          echo "# Upload Plan File" > ${{ env.OUT_FILENAME }}
           gcloud storage cp \
             ${{ env.GUARDIAN_PLAN_FILENAME }} \
             gs://${{ env.GUARDIAN_BUCKET_NAME }}/${{ env.GUARDIAN_PLAN_PREFIX }}/${{ env.GUARDIAN_PLAN_FILENAME }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-          echo "::endgroup::"
 
-          NAME="Terraform Show"
-          echo "::group::${NAME}"
-          echo "# ${NAME}" > ${{ env.OUT_FILENAME }}
-
+      - name: 'Terraform Show'
+        run: |-
+          echo "# Terraform Show" > ${{ env.OUT_FILENAME }}
           terraform show -no-color ${{ env.GUARDIAN_PLAN_FILENAME }} 2>&1 | tee -a ${{ env.OUT_FILENAME }}
-
-          echo "::endgroup::"
 
       - name: 'Set Failure Variable'
         if: ${{ failure() }}
