--- a/.github/workflows/test-apply.yml
+++ b/.github/workflows/test-apply.yml
@@ -40,6 +40,7 @@ jobs:
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
       guardian_terraform_version: '1.3.6'
+      guardian_protect_lockfile: true
 
   apply_projects:
     uses: './.github/workflows/apply.yml' # ratchet:exclude
@@ -49,3 +50,4 @@ jobs:
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
       guardian_terraform_version: '1.3.6'
+      guardian_protect_lockfile: true
