--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -42,6 +42,9 @@ jobs:
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_terraform_version: '1.3.6'
 
+      # Optional
+      # guardian_protect_lockfile: true # default true
+
     # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
     # secrets:
     #   workflow_github_token: '${{ secrets.GITHUB_TOKEN }}'
