--- a/examples/guardian-apply.yml
+++ b/examples/guardian-apply.yml
@@ -37,7 +37,8 @@ jobs:
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
       guardian_terraform_version: '1.3.6'
 
-      # Optional: retry settings
+      # Optional
+      # guardian_protect_lockfile: true # default true
       # max_retries: # default 5
       # base_retry_delay: '2' # default 2s
       # max_retry_delay: '60' # default 60s
