--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -40,6 +40,7 @@ jobs:
       guardian_terraform_version: '1.3.6'
 
       # Optional: retry settings
+      # guardian_protect_lockfile: true # default true
       # max_retries: # default 5
       # base_retry_delay: '2' # default 2s
       # max_retry_delay: '60' # default 60s
