--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -40,8 +40,10 @@ jobs:
       working_directory: '${{ inputs.working_directory }}'
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
-      guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
       guardian_terraform_version: '1.3.6'
+
+      # Optional
+      # guardian_protect_lockfile: true # default true
 
     # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
     # secrets:
