--- a/examples/guardian-apply.yml
+++ b/examples/guardian-apply.yml
@@ -31,10 +31,17 @@ jobs:
   apply:
     uses: 'abcxyz/guardian/.github/workflows/apply.yml@main' # TODO: pin this to the latest sha in the guardian repo
     with:
+      working_directory: 'WORKING_DIRECTORY'
       wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
       wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
       guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
       guardian_terraform_version: '1.3.6'
+
+      # Optional
+      # guardian_protect_lockfile: true # default true
+      # max_retries: # default 5
+      # base_retry_delay: '2' # default 2s
+      # max_retry_delay: '60' # default 60s
 
     # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
     # secrets:
