--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -31,7 +31,7 @@ permissions:
   id-token: 'write'
   pull-requests: 'read'
 
-# only admin should run at a time
+# only one admin should run at a time
 concurrency:
   group: '${{ github.workflow_ref }}'
 
