--- a/.github/workflows/test-admin.yml
+++ b/.github/workflows/test-admin.yml
@@ -12,8 +12,8 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-name: 'Guardian Admin - Test'
-run-name: 'Guardian Admin ${{ inputs.working_directory }} ${{ inputs.number }}'
+name: 'test_guardian_admin'
+run-name: 'test_guardian_admin - ${{ inputs.working_directory }} ${{ inputs.number }}'
 
 on:
   workflow_dispatch:
@@ -21,8 +21,6 @@ on:
       command:
         description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
         required: true
-      working_directory:
-        description: 'WORKING DIRECTORY - The Terraform directory to execute the command in. (defaults to repository root).'
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, this runs for main).'
 
@@ -37,12 +35,28 @@ concurrency:
 
 jobs:
   admin:
-    uses: './.github/workflows/admin.yml' # ratchet:exclude
-    with:
-      command: '${{ inputs.command }}'
-      working_directory: '${{ inputs.working_directory }}'
-      number: '${{ inputs.number }}'
-      wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
-      wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
-      guardian_terraform_version: '1.3.6'
-      guardian_protect_lockfile: true
+    runs-on: 'ubuntu-latest'
+    strategy:
+      fail-fast: false
+      matrix:
+        working_directory:
+          - 'test/ci'
+          - 'test/projects'
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
+
+      - name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
+        with:
+          workload_identity_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
+          service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
+
+      - name: 'Guardian Admin'
+        uses: './.github/actions/admin'
+        with:
+          command: '${{ inputs.command }}'
+          working_directory: '${{ matrix.working_directory }}'
+          number: '${{ inputs.number }}'
+          guardian_terraform_version: '1.3.6'
+          guardian_protect_lockfile: true
