--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -33,18 +33,18 @@ on:
       wif_service_account:
         required: true
         type: string
-      guardian_terraform_version:
+      terraform_version:
         required: true
         type: string
-      guardian_protect_lockfile:
+      protect_lockfile:
         type: boolean
         default: true
+      lock_timeout:
+        type: string
+        default: '10m'
     secrets:
       workflow_github_token:
         required: false
-
-env:
-  GITHUB_TOKEN: ${{ secrets.workflow_github_token || github.token }}
 
 jobs:
   admin:
@@ -66,9 +66,12 @@ jobs:
 
       - name: 'Guardian Admin'
         uses: 'abcxyz/guardian/.github/actions/admin@${{ github.job_workflow_sha }}' # match the sha for the reusable workflow
+        env:
+          GITHUB_TOKEN: '${{ secrets.workflow_github_token || github.token }}'
         with:
           command: '${{ inputs.command }}'
           working_directory: '${{ inputs.working_directory }}'
           number: '${{ inputs.number }}'
-          guardian_terraform_version: '${{ inputs.guardian_terraform_version }}'
-          guardian_protect_lockfile: '${{ inputs.guardian_protect_lockfile }}'
+          terraform_version: '${{ inputs.terraform_version }}'
+          protect_lockfile: '${{ inputs.protect_lockfile }}'
+          lock_timeout: '${{ inputs.lock_timeout }}'
