--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -25,15 +25,18 @@ on:
       wif_service_account:
         required: true
         type: string
-      guardian_bucket_name:
+      bucket_name:
         required: true
         type: string
-      guardian_terraform_version:
+      terraform_version:
         required: true
         type: string
-      guardian_protect_lockfile:
+      protect_lockfile:
         type: boolean
         default: true
+      lock_timeout:
+        type: string
+        default: '10m'
       max_retries:
         required: false
         default: 5
@@ -49,9 +52,6 @@ on:
     secrets:
       workflow_github_token:
         required: false
-
-env:
-  GITHUB_TOKEN: ${{ secrets.workflow_github_token || github.token }}
 
 jobs:
   plan:
@@ -73,11 +73,14 @@ jobs:
 
       - name: 'Guardian Plan'
         uses: 'abcxyz/guardian/.github/actions/plan@${{ github.job_workflow_sha }}' # match the sha for the reusable workflow
+        env:
+          GITHUB_TOKEN: '${{ secrets.workflow_github_token || github.token }}'
         with:
           working_directory: '${{ matrix.working_directory }}'
-          guardian_bucket_name: '${{ inputs.guardian_bucket_name }}'
-          guardian_terraform_version: '${{ inputs.guardian_terraform_version }}'
-          guardian_protect_lockfile: '${{ inputs.guardian_protect_lockfile }}'
+          bucket_name: '${{ inputs.bucket_name }}'
+          terraform_version: '${{ inputs.terraform_version }}'
+          protect_lockfile: '${{ inputs.protect_lockfile }}'
+          lock_timeout: '${{ inputs.lock_timeout }}'
           max_retries: '${{ inputs.max_retries }}'
           base_retry_delay: '${{ inputs.base_retry_delay }}'
           max_retry_delay: '${{ inputs.max_retry_delay }}'
