--- a/examples/guardian-admin.yml
+++ b/examples/guardian-admin.yml
@@ -21,8 +21,6 @@ on:
       command:
         description: 'COMMAND - The Terraform command to run including any arguments (this value is appended to the terraform command).'
         required: true
-      working_directory:
-        description: 'WORKING DIRECTORY - The Terraform directory to execute the command in. (defaults to repository root).'
       number:
         description: 'PR NUMBER - The Pull Request number to run the actions for (if blank, runs for the repository default branch).'
 
@@ -33,18 +31,44 @@ permissions:
 
 jobs:
   admin:
-    uses: 'abcxyz/guardian/.github/workflows/admin.yml@main' # TODO: pin this to the latest sha in the guardian repo
-    with:
-      command: '${{ inputs.command }}'
-      number: '${{ inputs.number }}'
-      working_directory: '${{ inputs.working_directory }}'
-      wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
-      wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
-      guardian_terraform_version: '1.3.6'
+    runs-on: 'ubuntu-latest'
+    strategy:
+      fail-fast: false
+      matrix:
+        working_directory:
+          - 'directory-1'
+          - 'directory-2'
 
-      # Optional
-      # guardian_protect_lockfile: true # default true
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
-    # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
-    # secrets:
-    #   workflow_github_token: '${{ secrets.GITHUB_TOKEN }}'
+      # Optional: required only if your terraform configuration needs access to google cloud
+      # - name: 'Authenticate to Google Cloud'
+      #   uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
+      #   with:
+      #     workload_identity_provider: 'YOUR_GUARDIAN_WIF_PROVIDER' # this can be provided via repository variables
+      #     service_account: 'YOUR_GUARDIAN_WIF_SERVICE_ACCOUNT' # this can be provided via repository variables
+
+      # Optional: set git config auth credentials for private modules if needed
+      # - name: 'Git Config'
+      #   run: |-
+      #     git config --global url."https://guardian-bot:${{ secrets.PAT_TOKEN }}@github.com".insteadOf "https://github.com"
+
+      - name: 'Guardian Admin'
+        uses: 'abcxyz/guardian/.github/actions/admin@SHA' # TODO: pin this to the latest sha in the guardian repo
+
+        # Optional: provide environment secrets for terraform providers
+        # env:
+        #   GITHUB_TOKEN: '${{ secrets.PAT_TOKEN }}'
+        #   GITHUB_OWNER: 'YOUR_ORG'
+
+        with:
+          command: '${{ inputs.command }}'
+          working_directory: '${{ matrix.working_directory }}'
+          number: '${{ inputs.number }}'
+          terraform_version: '1.3.6'
+
+          # Optional:
+          # protect_lockfile: true # default true
+          # lock_timeout: '10m'    # default 10m
