--- a/examples/guardian-plan.yml
+++ b/examples/guardian-plan.yml
@@ -31,20 +31,46 @@ permissions:
 
 jobs:
   plan:
-    uses: 'abcxyz/guardian/.github/workflows/plan.yml@main' # TODO: pin this to the latest sha in the guardian repo
-    with:
-      working_directory: 'WORKING_DIRECTORY'
-      wif_provider: '${{ vars.GUARDIAN_WIF_PROVIDER}}'
-      wif_service_account: '${{ vars.GUARDIAN_WIF_SERVICE_ACCOUNT }}'
-      guardian_bucket_name: '${{ vars.GUARDIAN_BUCKET_NAME }}'
-      guardian_terraform_version: '1.3.6'
+    runs-on: 'ubuntu-latest'
+    strategy:
+      fail-fast: false
+      matrix:
+        working_directory:
+          - 'directory-1'
+          - 'directory-2'
 
-      # Optional: retry settings
-      # guardian_protect_lockfile: true # default true
-      # max_retries: # default 5
-      # base_retry_delay: '2' # default 2s
-      # max_retry_delay: '60' # default 60s
+    steps:
+      - name: 'Checkout'
+        uses: 'actions/checkout@ac593985615ec2ede58e132d2e21d2b1cbd6127c' # ratchet:actions/checkout@v3
 
-    # Optional: GitHub token if needed using terraform github provider a custom PAT may be required depending on your use case
-    # secrets:
-    #   workflow_github_token: '${{ secrets.GITHUB_TOKEN }}'
+      # required to upload terraform plan files to cloud storage
+      - name: 'Authenticate to Google Cloud'
+        uses: 'google-github-actions/auth@ef5d53e30bbcd8d0836f4288f5e50ff3e086997d' # ratchet:google-github-actions/auth@v1
+        with:
+          workload_identity_provider: 'YOUR_GUARDIAN_WIF_PROVIDER' # this can be provided via repository variables
+          service_account: 'YOUR_GUARDIAN_WIF_SERVICE_ACCOUNT' # this can be provided via repository variables
+
+      # Optional: set git config for private modules if needed
+      # - name: 'Git Config'
+      #   run: |-
+      #     git config --global url."https://guardian-bot:${{ secrets.PAT_TOKEN }}@github.com".insteadOf "https://github.com"
+
+      - name: 'Guardian Plan'
+        uses: 'abcxyz/guardian/.github/actions/plan@SHA' # TODO: pin this to the latest sha in the guardian repo
+
+        # Optional: provide environment secrets for terraform providers
+        # env:
+        #   GITHUB_TOKEN: '${{ secrets.PAT_TOKEN }}'
+        #   GITHUB_OWNER: 'YOUR_ORG'
+
+        with:
+          working_directory: '${{ matrix.working_directory }}'
+          bucket_name: 'YOUR_GUARDIAN_BUCKET_NAME' # this can be provided via repository variables
+          terraform_version: '1.3.6'
+
+          # Optional:
+          # protect_lockfile: true # default true
+          # lock_timeout: '10m'    # default 10m
+          # max_retries: '5'       # default 5
+          # base_retry_delay: '2'  # default 2s
+          # max_retry_delay: '60'  # default 60s
